[package]
name = "claudetop"
version = "0.2.2"
edition = "2021"
description = "Terminal dashboard for monitoring AI provider usage and costs"
license = "MIT"
repository = "https://github.com/randomradio/claudetop"
homepage = "https://github.com/randomradio/claudetop"
keywords = ["tui", "claude", "ai", "dashboard", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
